<resources>
    <string name="app_name">KurzListok</string>
    <string name="action_settings">About</string>
    <string name="datum">Dátum</string>
    <string name="workingDay">Kurz zo dňa</string>
    <string name="mena">Mena</string>
    <string name="prepocet">Prepocet</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Zmena hodnoty</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hodnota">Hodnota</string>
    <string name="nula">0 CZK</string>
    <string name="CZK">1 CZK =</string>
    <string name="_1_czk">1 CZK</string>
</resources>
