<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.3" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.85" />

            <TextView
                android:id="@+id/twDatum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/datum"
                app:layout_constraintBottom_toBottomOf="@id/editText1"
                app:layout_constraintEnd_toStartOf="@id/guidelineLeft"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/editText1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Vyber dátum"
                app:layout_constraintBottom_toBottomOf="@+id/twDatum"
                app:layout_constraintEnd_toStartOf="@id/guidelineRight"
                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/twKurzZoDna"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/workingDay"
                app:layout_constraintEnd_toStartOf="@id/guidelineLeft"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editText1" />

            <TextView
                android:id="@+id/workingDay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="2"

                app:layout_constraintBottom_toBottomOf="@id/twKurzZoDna"
                app:layout_constraintEnd_toStartOf="@id/guidelineRight"
                app:layout_constraintStart_toEndOf="@id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@id/editText1" />

            <TextView
                android:id="@+id/twMena"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/mena"
                app:layout_constraintEnd_toStartOf="@id/guidelineLeft"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/twKurzZoDna" />


            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:spinnerMode="dialog"
                app:layout_constraintBottom_toBottomOf="@+id/twMena"
                app:layout_constraintEnd_toStartOf="@id/guidelineRight"
                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/twKurzZoDna" />

            <TextView
                android:id="@+id/twCZE"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/CZK"
                app:layout_constraintEnd_toStartOf="@id/guidelineLeft"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/twMena" />

            <TextView
                android:id="@+id/tvHodnota"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:text="@string/_1_czk"
                android:textColor="#000"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/twCZE"
                app:layout_constraintEnd_toStartOf="@id/guidelineRight"
                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/twMena" />

            <ImageButton
                android:id="@+id/buttonEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_edit_24"
                app:layout_constraintBottom_toBottomOf="@+id/twCZE"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guidelineRight"
                app:layout_constraintTop_toBottomOf="@+id/twMena" />

            <TextView
                android:id="@+id/twPrepocet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/prepocet"
                app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
                app:layout_constraintEnd_toStartOf="@id/guidelineLeft"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/twCZE" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                app:layout_constraintEnd_toStartOf="@id/guidelineRight"
                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/twCZE">

                <RadioButton
                    android:id="@+id/zCZK"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:onClick="onRadioButtonClicked"
                    android:text="z CZK" />

                <RadioButton
                    android:id="@+id/doCZK"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:text="do CZK" />
            </RadioGroup>

            <TextView
                android:id="@+id/vysledok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/nula"
                android:textColor="#000"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/guidelineRight"
                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/hodnota"
                app:layout_constraintEnd_toStartOf="@id/guidelineLeft"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vysledok" />

            <EditText
                android:id="@+id/editTextHodnota"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="0"
                app:layout_constraintEnd_toStartOf="@id/guidelineRight"
                app:layout_constraintStart_toEndOf="@id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/vysledok" />

            <TextView
                android:id="@+id/menaZ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:gravity="center"
                android:text="CZK"
                app:layout_constraintBottom_toBottomOf="@+id/editTextHodnota"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guidelineRight"
                app:layout_constraintTop_toTopOf="@+id/editTextHodnota" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>